@@ -48,7 +48,10 @@ tasks.register('run', JavaExec) {
 	classpath = sourceSets.test.runtimeClasspath
 	mainClass = pluginMainClass
 
-	jvmArgs "-ea"
+	jvmArgs "-ea",
+		"--add-opens", "java.desktop/com.apple.eawt=ALL-UNNAMED",
+		"--add-opens", "java.desktop/com.apple.eawt.event=ALL-UNNAMED",
+		"--add-opens", "java.desktop/com.apple.laf=ALL-UNNAMED"
 	args "--developer-mode", "--debug"
 }
 
